# python_master

./: .gitignore  postgres_poc.py  requirements.txt
.github/workflows/: repository-cleanup-releases.yaml  test-workflow.yaml
actions/releases/: action.yml  repository-cleanup-releases.yaml
actions/test/: action.yml
data/: f_dist.py  format_json.py  stats.text
modules/: module_tester.py
modules/db/: books.json  db.py  verses.db.old  verses.json  verses.sqlite
modules/db_backup/: db.py
modules/logger/: logger.py
modules/unsplash_images/: image_downloader.py
playground/aleks_algo/: algo.py
playground/aws/: boto3_test.py
playground/docker_volume_mount/: Dockerfile  main.py
playground/download_video_from_url/: archive_2.txt  poc.py  scratch.txt
playground/exceptions/: exception_example.py
playground/maps_and_lambdas/: map_lambda.py
playground/poetry_tests/: pyproject.toml  requirements.txt
playground/portal-offboarding-poc/: .env.local  main.py  requirements.txt
playground/pyPDF/: from_and_to.py  step.py  test.py
playground/seed_rules/: seed.py
playground/sliceMyPDF/: main.py
playground/smdp/: data.json  super_mega_death_parser.py
playground/sql_alchemy/: pdb.py  sql_alchemy_test.py
playground/to_lower/: dags.txt  to_lower.py
studies/django/django_5/hello_world_project/: pyproject.toml
studies/django/django_5/hello_world_project/src/hello_world/: tests.py  urls.py  views.py
studies/django/django_5/hello_world_project/src/hello_world_project/: asgi.py  settings.py  urls.py  wsgi.py
studies/django/django_5/hello_world_project/src/templates/: about.html  base.html  contact.html  home.html  inventory.html
studies/django/django_5/rest_api_example/: pyproject.toml
studies/django/django_5/rest_api_example/src/rest_api_project/: settings.py  urls.py
studies/django/django_5/rest_api_example_2/: pyproject.toml
studies/django/django_5/rest_api_example_2/src/rest_api_project/: settings.py  urls.py
studies/django/django_5/rest_api_example_2/src/rest_api_project/rest_api/: views.py
studies/poetry/rp-poetry-example/rp-poetry/: pyproject.toml
(+1558 files in other folders)
