[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["cywisp <cywisp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
configargparse = "^1.7"
beautifulsoup4 = "^4.12.3"
arrow = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
