[tool.poetry]
name = "hello-world-project"
version = "0.1.0"
description = ""
authors = ["cywisp <cywisp@gmail.com>"]
readme = "README.md"
packages = [{include = "hello_world_project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
