[tool.poetry]
name = "rest-api-example-2"
version = "0.1.0"
description = ""
authors = ["cywisp <cywisp@gmail.com>"]
readme = "README.md"
packages = [{include = "rest_api_example_2", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
